feat(REQ-7): 使用自定义的 StayCloseToIntimatePlayer 行为，重构部分类为 record