@@ -5,12 +5,17 @@ import com.hexagram2021.girlfriends.common.character.GirlfriendTypes;
 import com.hexagram2021.girlfriends.common.entity.ai.GirlfriendsActivities;
 import com.hexagram2021.girlfriends.common.entity.ai.GirlfriendsSensorTypes;
 import com.hexagram2021.girlfriends.common.entity.ai.GirlfriendsEnvironmentAttributes;
+import com.hexagram2021.girlfriends.common.entity.ai.behavior.GirlfriendCommonAiPackages;
+import com.mojang.datafixers.util.Pair;
 import net.minecraft.resources.Identifier;
 import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.entity.PathfinderMob;
 import net.minecraft.world.entity.ai.ActivityData;
 import net.minecraft.world.entity.ai.Brain;
+import net.minecraft.world.entity.ai.behavior.BehaviorControl;
 import net.minecraft.world.level.Level;
+
+import java.util.List;
 
 /**
  * 沫沫实体喵~
@@ -21,6 +26,11 @@ import net.minecraft.world.level.Level;
  * @author liudongyu
  */
 public class MomoEntity extends GirlfriendEntity {
+	/**
+	 * 构造沫沫实体
+	 * @param entityType 实体类型
+	 * @param level 世界
+	 */
 	public MomoEntity(EntityType<? extends PathfinderMob> entityType, Level level) {
 		super(entityType, level);
 	}
@@ -33,20 +43,28 @@ public class MomoEntity extends GirlfriendEntity {
 	@Override
 	protected Brain.Provider<GirlfriendEntity> getBrainProvider() {
 		return Brain.provider(
-				ImmutableList.of(GirlfriendsSensorTypes.SHELTER_SENSOR.get()),
+				List.of(GirlfriendsSensorTypes.SHELTER_SENSOR.get()),
 				_ -> {
 					ImmutableList.Builder<ActivityData<GirlfriendEntity>> activities = ImmutableList.builder();
 
-					activities.add(ActivityData.create(GirlfriendsActivities.MORNING.get(), ImmutableList.of(
-					)));
-					activities.add(ActivityData.create(GirlfriendsActivities.DAY_WORK.get(), ImmutableList.of(
-					)));
-					activities.add(ActivityData.create(GirlfriendsActivities.AFTERNOON.get(), ImmutableList.of(
-					)));
-					activities.add(ActivityData.create(GirlfriendsActivities.SUNSET.get(), ImmutableList.of(
-					)));
-					activities.add(ActivityData.create(GirlfriendsActivities.NIGHT_REST.get(), ImmutableList.of(
-					)));
+					ImmutableList.Builder<Pair<Integer, BehaviorControl<GirlfriendEntity>>> morning = ImmutableList.builder();
+					ImmutableList.Builder<Pair<Integer, BehaviorControl<GirlfriendEntity>>> dayWork = ImmutableList.builder();
+					ImmutableList.Builder<Pair<Integer, BehaviorControl<GirlfriendEntity>>> afternoon = ImmutableList.builder();
+					ImmutableList.Builder<Pair<Integer, BehaviorControl<GirlfriendEntity>>> sunset = ImmutableList.builder();
+					ImmutableList.Builder<Pair<Integer, BehaviorControl<GirlfriendEntity>>> nightRest = ImmutableList.builder();
+
+					// 通用行为
+					GirlfriendCommonAiPackages.addCoreActivities(morning, 3, 16);
+					GirlfriendCommonAiPackages.addCoreActivities(dayWork, 3, 16);
+					GirlfriendCommonAiPackages.addCoreActivities(afternoon, 3, 16);
+					GirlfriendCommonAiPackages.addCoreActivities(sunset, 3, 16);
+					GirlfriendCommonAiPackages.addCoreActivities(nightRest, 3, 16);
+
+					activities.add(ActivityData.create(GirlfriendsActivities.MORNING.get(), morning.build()));
+					activities.add(ActivityData.create(GirlfriendsActivities.DAY_WORK.get(), dayWork.build()));
+					activities.add(ActivityData.create(GirlfriendsActivities.AFTERNOON.get(), afternoon.build()));
+					activities.add(ActivityData.create(GirlfriendsActivities.SUNSET.get(), sunset.build()));
+					activities.add(ActivityData.create(GirlfriendsActivities.NIGHT_REST.get(), nightRest.build()));
 
 					return activities.build();
 				}
